<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/string1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:autofillHints="name"
        android:hint="@string/string1_placeholder"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/string2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:autofillHints="name"
        android:hint="@string/string2_placeholder"
        android:inputType="text"
        android:textSize="16sp" />


    <Button
        android:id="@+id/comparate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/comparate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="#D343EC"
        android:hint="@string/TextViewPlaceholder"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>